manifest/dev/next-env-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-env-admin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-env-admin
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: next-env-admin
    spec:
      containers:
        - name: next-env-admin
          image: codecrafterteam/next-env:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
