manifest/dev/next-env-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: next-env-admin
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
#  type: NodePort
  selector:
    app: next-env-admin
